radarr/debug.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: radarr-debug
  labels:
    k8s-app: radarr-debug
spec:
  containers:
  - name: debug
    image: ubuntu:20.04
    imagePullPolicy: IfNotPresent
    command: [ "sh", "-c", "sleep 360000" ] # Keeps the container running
    volumeMounts:
    - name: config
      mountPath: /config
    - name: media
      mountPath: /media
  volumes:
  - name: config
    persistentVolumeClaim:
      claimName: radarr-pvc
  - name: media
    nfs:
      server: 192.168.0.100
      path: /mnt/epool/media
      readOnly: false
  restartPolicy: Never
