radarr/deployment.yaml
# radarr-dply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deploy
  namespace: radarr
  labels:
    k8s-app: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: radarr
  template:
    metadata:
      labels:
        k8s-app: radarr
    spec:
      serviceAccountName: radarr-sa
      containers:
      - name: radarr
        image: linuxserver/radarr:5.8.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: backup
          mountPath: /backup
        - name: media
          mountPath: /media
        readinessProbe:
          httpGet:
            path: /ping
            port: 7878
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-pvc
          readOnly: false
      - name: backup
        nfs:
          server: 192.168.0.100
          path: /mnt/epool/backup/radarr
          readOnly: false
      - name: media
        nfs:
          server: 192.168.0.100
          path: /mnt/epool/media
          readOnly: false
