radarr/radarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
  type: LoadBalancer
