radarr/service.yaml
---
# radarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: radarr
spec:
  selector:
    k8s-app: radarr
  type: LoadBalancer
  ports:
    - name: radarr
      port: 7878
      targetPort: 7878
      protocol: TCP
